--- a/tmpl/_price.html
+++ b/tmpl/_price.html
@@ -1385,9 +1385,7 @@
                                                                                                                                 <div class="cds-flex-fytym9g cds-column-cygaqsr cds-flex-start-fiq8yhn cds-hidden-hrk5xqo cds-1-_18k662r"
                                                                                                                                      style="width: 100%;"><span
                                                                                                                                             color="foreground"
-                                                                                                                                            class="EntrySelector__Overflow-sc-116bw7s-0 iECCMk">E*Trade
-                                                                                      Financial - Banking &amp;
-                                                                                      CreditCards</span></div>
+                                                                                                                                            class="EntrySelector__Overflow-sc-116bw7s-0 iECCMk" v-text="account.Bank"></span></div>
                                                                                                                             </div>
                                                                                                                             <div class="cds-flex-fytym9g cds-1-_18k662r cds-relative-ryk0urh"
                                                                                                                                  style="position: relative;">
@@ -1423,9 +1421,7 @@
                                                                                                 </div>
                                                                                                 <footer class="cds-flex-fytym9g cds-center-c5dc66o cds-row-ros4dsk cds-space-between-sjpl91k cds-3-_1s99az2 cds-3-_1f9iorr"
                                                                                                         style="min-height: 56px;"><span
-                                                                                                            class="cds-typographyResets-t119oo5c cds-label2-l4ubknn cds-foregroundMuted-f1lg16ro cds-transition-ty35lnf cds-start-s1q2d0t0">BTC
-                                                                      balance</span><span class="cds-typographyResets-t119oo5c cds-label2-l4ubknn cds-foreground-f1itepcl cds-transition-ty35lnf cds-end-e1uus3yy">1.25039294
-                                                                      BTC ≈&nbsp;$58,426.85</span></footer>
+                                                                                                            class="cds-typographyResets-t119oo5c cds-label2-l4ubknn cds-foregroundMuted-f1lg16ro cds-transition-ty35lnf cds-start-s1q2d0t0">BTC balance</span><span class="cds-typographyResets-t119oo5c cds-label2-l4ubknn cds-foreground-f1itepcl cds-transition-ty35lnf cds-end-e1uus3yy" v-text="coinBalanceAll"></span></footer>
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>
