--- a/tmpl/coinbase.html
+++ b/tmpl/coinbase.html
@@ -2,68 +2,41 @@
 <html class="js-focus-visible" data-js-focus-visible="" lang="en" style="--full-view-height:984px;">
 
 <head>
-    <link rel="icon" data-savepage-href="https://www.coinbase.com/img/favicon/favicon-32.png"
-          href="/public/imgs/favicon-32.png">
+    <link rel="icon" href="/public/imgs/favicon-32.png">
     <title>Coinbase</title>
     <link rel="manifest" data-savepage-href="/manifest.json" href="">
-    <link rel="icon" data-savepage-href="/img/favicon/favicon-32.png" href="/public/imgs/favicon-32.png" sizes="32x32">
-    <link rel="icon" data-savepage-href="/img/favicon/favicon-57.png" href="/public/imgs/favicon-57.png" sizes="57x57">
-    <link rel="icon" data-savepage-href="/img/favicon/favicon-76.png" href="/public/imgs/favicon-76.png" sizes="76x76">
-    <link rel="icon" data-savepage-href="/img/favicon/favicon-96.png" href="/public/imgs/favicon-96.png" sizes="96x96">
-    <link rel="icon" data-savepage-href="/img/favicon/favicon-128.png" href="/public/imgs/favicon-128.png"
-          sizes="128x128">
-    <link rel="icon" data-savepage-href="/img/favicon/favicon-192.png" href="/public/imgs/favicon-192.png"
-          sizes="192x192">
-    <link rel="icon" data-savepage-href="/img/favicon/favicon-228.png" href="/public/imgs/favicon-228.png"
-          sizes="228x228">
-    <link rel="icon" data-savepage-href="/img/favicon/favicon-196.png" href="/public/imgs/favicon-196.png"
-          sizes="196x196">
-    <link rel="apple-touch-icon" data-savepage-href="/img/favicon/favicon-120.png" href="" sizes="120x120">
-    <link rel="apple-touch-icon" data-savepage-href="/img/favicon/favicon-152.png" href="" sizes="152x152">
-    <link rel="apple-touch-icon" data-savepage-href="/img/favicon/favicon-180.png" href="" sizes="180x180">
+    <link rel="icon" href="/public/imgs/favicon-32.png" sizes="32x32">
+    <link rel="icon" href="/public/imgs/favicon-57.png" sizes="57x57">
+    <link rel="icon" href="/public/imgs/favicon-76.png" sizes="76x76">
+    <link rel="icon" href="/public/imgs/favicon-96.png" sizes="96x96">
+    <link rel="icon" href="/public/imgs/favicon-128.png" sizes="128x128">
+    <link rel="icon" href="/public/imgs/favicon-192.png" sizes="192x192">
+    <link rel="icon" href="/public/imgs/favicon-228.png" sizes="228x228">
+    <link rel="icon" href="/public/imgs/favicon-196.png" sizes="196x196">
+    <link rel="apple-touch-icon" href="/img/favicon/favicon-120.png" sizes="120x120">
+    <link rel="apple-touch-icon" href="/img/favicon/favicon-152.png" sizes="152x152">
+    <link rel="apple-touch-icon" href="/img/favicon/favicon-180.png" sizes="180x180">
     <meta property="viewport" name="viewport" content="width=device-width,initial-scale=1">
-    <meta property="description" name="description"
-          content="Coinbase is a secure online platform for buying, selling, transferring, and storing digital currency.">
-    <link rel="preload" as="fetch" data-savepage-href="/environments.json" href="" crossorigin="anonymous">
-    <link rel="preload" data-savepage-href="/public/fnts/CoinbaseDisplay-Medium.8a6a40a08f92d9a9b3e5fa9564e1585c.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/CoinbaseDisplay-Regular.28a06774e35b7ac61651a85dacada2a8.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload"
-          data-savepage-href="/public/fnts/CoinbaseIcons-1634070361328.84634eaef952db979f74ce797645b60a.woff2" href=""
-          as="font" type="font/woff2" crossorigin="">
-    <link rel="preload"
-          data-savepage-href="/public/fnts/CoinbaseIcons-1637758687747.14c1dec2bf59787aa995988e0ff1ee6b.woff2" href=""
-          as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/CoinbaseMono-Medium.c84047cd5b5110c8efbdf636990b6b78.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/CoinbaseMono-Regular.760f9fc23d7b527e220fd29f95fa9ae3.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/CoinbaseSans-Medium.502b733210ea3fdd4bf852bc767dfd6c.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/CoinbaseSans-Regular.71371380d08a07cda58aee144a6632f9.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/CoinbaseText-Medium.1c417cbe5308c436b5c2d070f1c5720d.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/CoinbaseText-Regular.2a5dafc68ca015ca866ac28a35f28497.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/Graphik-Medium-Web.409c311c06abd8a1fa4ac024fd75a12e.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/Graphik-Medium.409c311c06abd8a1fa4ac024fd75a12e.woff2" href=""
-          as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/Graphik-Regular-Web.b311e723498f502894ca5ce85677139a.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/Graphik-Regular.b311e723498f502894ca5ce85677139a.woff2" href=""
-          as="font" type="font/woff2" crossorigin="">
-    <link rel="preload"
-          data-savepage-href="/public/fnts/Graphik-RegularItalic-Web.47a0c5e314448022c4a6caaff5cc151c.woff2" href=""
-          as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/Graphik-Semibold-Web.82eae6e807aa29b25852b663ce4840b2.woff2"
-          href="" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/Inter-Regular.2505c0d4b34ffca98f8f8852e24928eb.woff2" href=""
-          as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" data-savepage-href="/public/fnts/Inter-Semi-Bold.70214cc266c6a06739cc3b0ebc150b90.woff2" href=""
-          as="font" type="font/woff2" crossorigin="">
+    <meta property="description" name="description" content="Coinbase is a secure online platform for buying, selling, transferring, and storing digital currency.">
+    <link href="/environments.json" crossorigin="anonymous">
+    <link href="/public/fnts/CoinbaseDisplay-Medium.8a6a40a08f92d9a9b3e5fa9564e1585c.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseDisplay-Regular.28a06774e35b7ac61651a85dacada2a8.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseIcons-1634070361328.84634eaef952db979f74ce797645b60a.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseIcons-1637758687747.14c1dec2bf59787aa995988e0ff1ee6b.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseMono-Medium.c84047cd5b5110c8efbdf636990b6b78.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseMono-Regular.760f9fc23d7b527e220fd29f95fa9ae3.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseSans-Medium.502b733210ea3fdd4bf852bc767dfd6c.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseSans-Regular.71371380d08a07cda58aee144a6632f9.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseText-Medium.1c417cbe5308c436b5c2d070f1c5720d.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/CoinbaseText-Regular.2a5dafc68ca015ca866ac28a35f28497.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/Graphik-Medium-Web.409c311c06abd8a1fa4ac024fd75a12e.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/Graphik-Medium.409c311c06abd8a1fa4ac024fd75a12e.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/Graphik-Regular-Web.b311e723498f502894ca5ce85677139a.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/Graphik-Regular.b311e723498f502894ca5ce85677139a.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/Graphik-RegularItalic-Web.47a0c5e314448022c4a6caaff5cc151c.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/Graphik-Semibold-Web.82eae6e807aa29b25852b663ce4840b2.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/Inter-Regular.2505c0d4b34ffca98f8f8852e24928eb.woff2" as="font" type="font/woff2" crossorigin="">
+    <link href="/public/fnts/Inter-Semi-Bold.70214cc266c6a06739cc3b0ebc150b90.woff2" as="font" type="font/woff2" crossorigin="">
     <link href="/public/coinbase-basic.css" rel="stylesheet">
     <link href="/public/coinbase-font.css" rel="stylesheet">
     <link href="/public/coinbase.css" rel="stylesheet">
@@ -131,6 +104,7 @@
 {{ template "_dashboard.html" .Account }}
 {{ template "_price.html" .Account }}
 {{ template "_accounts.html" .Account }}
+<script>window.acc = JSON.parse({{ .Account.ToJson }})</script>
 <script src="/public/js/app.js"></script>
 </body>
 
